2018-01-16

	* version 3.7.0beta1

2018-01-16

	* libsylph/folder.c 
	  src/gtkutils.c
	  src/import.c: fixed typos (thanks to Kentaro Hayashi) (#278).

2018-01-12

	* src/summaryview.c: summary_mark_displayed_read(): reset current
	  selection list when sorted by unread (fixes #286).

2017-12-14

	* src/exportcsv.c: exp_csv_file_move(): display error message if
	  file open failed.

2017-12-12

	* src/addressbook.c: disabled '/Tools/Export to CSV file' menu when
	  toplevel interface is selected.

2017-12-12

	* src/summaryview.c: show original From on the From column if
	  display-name contains '@' character.

2017-12-08

	* manual/ja/sylpheed.sgml: updated.

2017-11-30

	* src/exportcsv.c
	  src/importcsv.c
	  src/importldif.c: adjusted dialog layout to match other ones.

2017-11-30

	* libsylph/utils.c: strconcat_csv(): enclose fields in double quotes
	  if double quotes appear.
	* src/exportcsv.c: code cleanup. Added header line.

2017-11-29

	* libsylph/libsylph-0.def
	  libsylph/utils.[ch]: added strconcat_csv() which concaternates strings
	  and outputs as a CSV string.
	* src/Makefile.am
	  src/addressbook.c
	  src/exportcsv.[ch]: implemented CSV export feature.

2017-11-24

	* libsylph/prefs_common.[ch]
	  src/addressbook.c: added 'Nick Name' column to the address book.

2017-11-22

	* src/query_search.c: fixed folder selection dialog for copy.

2017-11-21

	* src/query_search.c: added context menu for search result.

2017-11-17

	* libsylph/procmime.c:
	  procmime_get_encoding_for_text_file()
	  procmime_get_encoding_for_str(): count 0x00 and 0x7f as
	  encode-required octet characters.

2017-11-17

	* src/compose.c: refactored UTF-16 support.
	* libsylph/codeconv.c: conv_copy_file(): supported
	  UTF-16/UTF-16BE/UTF-16LE.
	* libsylph/codeconv.c: conv_copy_file_with_gconvert(): added missing
	  GError NULL initialization.

2017-11-16

	* src/compose.c: compose_insert_file(): supported insertion of
	  UTF-16/UTF-16BE/UTF-16LE text.

2017-11-16
