@@ -4,6 +4,10 @@
 
 2018-01-16
 
+	* src/about.c: updated copyright year.
+
+2018-01-16
+
 	* libsylph/folder.c 
 	  src/gtkutils.c
 	  src/import.c: fixed typos (thanks to Kentaro Hayashi) (#278).
